tests/slurm/slurm-56394338.out
export: Command not found.
export: Command not found.
export: Command not found.
export: Command not found.
Badly placed ()'s.
 
Running threaded PSI4 on node17 
/home/mdavis/anaconda3/envs/p4env/bin/psi4
 
Working and scratch directories
/home/mdavis/f12eom_optimizer/tests/slurm
/scratch/mdavis/PSI4_2022-08-16_15:11:16.335113338
 
use -n:  to specify number of threads
use -i:  to specify input  file     (default = input.dat)
use -o:  to specify output file     (default = file.out )
 
-h or --help for more options
 
Running...
  File "/home/mdavis/f12eom_optimizer/f12eom_optimizer/f12eom_optimizer.py", line 26
    keywords={"scf_type": "df"}
             ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
...Done
 
